@@ -129,4 +129,5 @@ This file documents software changes since the third edition.
 - ch06.R has been updated for multcomp >= 0.991-1
 - profile.glm is more likely to find the model frame in complicated
   scopes.
-- message() is used for most messages
+- message() is used for most messages.
+- truehist() checks more thoroughly for erroneous inputs.
